# meatspace

./: Anchor.toml  LAUNCH-CHECKLIST.md  README.md  ROADMAP.md  TOKEN.md  package.json  tsconfig.json
api/: meatspace.ts
app/: index.html
blinks-api/: .env.example  .env.production  .htaccess  DEPLOY-CPANEL.md  next.config.js  package-lock.json  package.json  server.js  vercel.json
blinks-api/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  trace  (+2 more)
community/: DISCORD-SETUP.md
demo/: FALLBACKS.md  README.md  SCRIPT.md  demo-agent.sh  demo-orchestrator.sh  demo-worker.sh  mock-api.sh  quick-reset.sh  test-demo.sh
docs/: 00-MASTER-INDEX.md  AGENT-ECOSYSTEM.md  API-SPECIFICATION.md  ARCHITECTURE.md  GRANGER-ACTION-PLAN.md  PITCH-DECK.md  SHIPPING-ADAPTER-SPEC.md  SWARM-STATUS.md
events/: TWITTER-SPACES-PLAN.md
listings/: ECOSYSTEM-LISTINGS.md
marketing/: 30-DAY-CONTENT.md  BRAND-IDENTITY.md  CAMPAIGN-READY-TO-DEPLOY.md  DEPLOY-NOW.md  DMS-READY-TO-SEND.md  INFLUENCER-TRACKER.md  MEME-CONCEPTS.md  PR-KIT.md  READY-TO-POST-NOW.md  SWARM-TASKS.md  TWEETS-READY-TO-POST.md  TWITTER-PROFILE-SETUP.md  VIDEO-SCRIPTS.md
outreach/: VIP-MESSAGES.md
partnerships/: PARTNERSHIP-TARGETS.md
product/: BLINKS-SPEC.md
programs/meatspace/: Cargo.toml
programs/meatspace/src/: lib.rs
proof/: FIRST-TASK-PLAN.md
sdk/: README.md  package.json  tsconfig.json
skill/: SKILL.md  cli.ts
social/: FARCASTER-LAUNCH.md  REDDIT-STRATEGY.md
tests/: meatspace.ts
(+61 files in other folders)
